i#2260 web: Finalize new automated web generation
Fixes issues with the initial commit of the Action to generate
the new web content:
- Wrong path to runsuite_wrapper.pl

Removes the old drmemory_docs generation step from the ci-package
action.

Issue: #2260

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -85,7 +85,7 @@ jobs:
 
     - name: Build Docs
       working-directory: ${{ github.workspace }}
-      run: ./suite/runsuite_wrapper.pl travis 64_only
+      run: ./tests/runsuite_wrapper.pl travis 64_only
       env:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
