Add missing submodules; add package.cmake copy of embedded docs

--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -92,7 +92,8 @@ jobs:
       env:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
-        DEPLOY_DOCS: yes
+        # Docs are deployed separately in ci-docs.yml.
+        DEPLOY_DOCS: no
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
