i#2260 web: Finalize new automated web generation (#2408)
Fixes issues with the initial commit of the Action to generate
the new web content:
- Wrong path to runsuite_wrapper.pl
- Add missing submodules
- Add package.cmake copy of embedded docs
- Add error checking for an empty glob
- Fix install path for embedded docs

Removes the old drmemory_docs generation step from the ci-package
action.

Issue: #2260

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -53,6 +53,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: true
 
     - name: Fetch Sources
       run: |
@@ -85,7 +87,7 @@ jobs:
 
     - name: Build Docs
       working-directory: ${{ github.workspace }}
-      run: ./suite/runsuite_wrapper.pl travis 64_only
+      run: ./tests/runsuite_wrapper.pl travis 64_only
       env:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
@@ -100,7 +102,7 @@ jobs:
 
     - name: Deploy Embedded Docs
       run: |
-        rsync -av --delete embed/html/ drmemory.github.io/docs/
+        rsync -av --delete html_embed/ drmemory.github.io/docs/
         cd drmemory.github.io
         git config --local user.name "cronbuild"
         git config --local user.email "drmemory-devs@googlegroups.com"
