i#2260 web: Add wiki content to doxygen docs
Adds all of the Github wiki content to new doxygen docs pages
integrated into the web site.

Updates references to wiki pages in other files in the repository.

Issue: #2260

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -104,8 +104,10 @@ WARN_LOGFILE           =
 # top-level pages (we insert additional filenames here in CMake_doxyfile.cmake).
 # When adding new DRMF extension docs, also add to docs/CMakeLists.txt and
 # to DR's api/docs/ext.gendox.
-INPUT                  = main.dox using.dox options-docs.dox release.dox \
-                         drmf.dox drsyscall.dox drsymcache.dox umbra.dox drfuzz.dox
+INPUT                  = main.dox download.dox using.dox options-docs.dox release.dox \
+                         drmf.dox drsyscall.dox drsymcache.dox umbra.dox drfuzz.dox \
+                         contribute.dox build.dox projects.dox new_release.dox \
+                         test.dox design_docs.dox arm_port.dox
 FILE_PATTERNS          =
 RECURSIVE              = NO
 EXCLUDE                =
