update issue referenes in tests/CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -445,7 +445,7 @@ if (ARM)
   append_test_compile_flags(free_arm "-marm")
 endif (ARM)
 newtest(badjmp badjmp.c)
-if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
   newtest(registers registers.c)
 endif ()
 if (ARM)
@@ -459,7 +459,7 @@ if (TOOL_DR_MEMORY)
   # Doesn't make sense for DrHeapstat
   newtest(multierror multierror.cpp)
 endif (TOOL_DR_MEMORY)
-if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
   newtest_custbuild(bitfield bitfield.cpp "-DBITFIELD_ASM" bitfield)
   if (WIN32)
     # i#489: building /GL results in a double-xor sequence
@@ -643,7 +643,7 @@ CHECK_C_COMPILER_FLAG("-Wno-alloc-size-larger-than=4294967295"
   HAVE_ALLOC_SIZE_WARNING_INTERNAL)
 
 if (TOOL_DR_MEMORY)
-  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
     # PR 525807: test malloc stacks
     newtest(varstack varstack.c)
   endif ()
@@ -654,7 +654,7 @@ if (TOOL_DR_MEMORY)
   if (NOT X64) # XXX i#111: -esp_fastpath not supported yet
     newtest_nobuild(leaks-only malloc "" "-leaks_only" "" OFF "")
   endif ()
-  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
     if (NOT X64) # FIXME i#111: failing on Travis
       newtest_nobuild(slowpath registers "" "-no_fastpath" "" OFF "registers")
     endif ()
@@ -668,7 +668,7 @@ if (TOOL_DR_MEMORY)
   if (NOT X64) # FIXME i#111: failing on Travis
     newtest_nobuild(nosymcache malloc "" "-no_use_symcache" "" OFF malloc)
   endif ()
-  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
     newtest_nobuild(strict_bitops bitfield "" "-strict_bitops" "" OFF "bitfield.strict")
   endif ()
   # test this option to exercise the realloc handling code.
@@ -683,7 +683,7 @@ if (TOOL_DR_MEMORY)
   newtest_nobuild(redzone1024 malloc "" "-redzone_size;1024" "" OFF "malloc")
   newtest_nobuild_ex(free.exitcode free "" "-exit_code_if_errors;42" "" OFF "free" 42 "")
   newtest_nobuild_ex(hello.exitcode hello "" "-exit_code_if_errors;4" "" OFF "hello" 0 "")
-  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
     newtest_nobuild_ex(blocklist_uninit.op registers ""
       "-check_uninit_blocklist;registers*" "" OFF "registers.blocklist" 0 "")
     newtest_nobuild_ex(blocklist_uninit.supp registers ""
@@ -899,13 +899,13 @@ if (TOOL_DR_MEMORY)
   # pattern mode testing.
   newtest_nobuild(free.pattern free "" "-unaddr_only" "" OFF "addronly")
   newtest_nobuild(malloc.pattern malloc "" "-unaddr_only" "" OFF "")
-  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
     newtest_nobuild(registers.pattern registers "" "-unaddr_only" "" OFF
       "registers.pattern")
   endif ()
   newtest_nobuild(track_origins.pattern track_origins ""
     "-unaddr_only;-track_origins_unaddr" "" OFF "track_origins")
-  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
     newtest_nobuild_ex(state.pattern state "" "-unaddr_only" "" OFF "" "ANY" "")
   endif ()
 
@@ -935,7 +935,7 @@ else (TOOL_DR_MEMORY)
   set(nudge_test_args "")
 endif (TOOL_DR_MEMORY)
 
-if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
   # nudge test: runs infloop in background and runtest.cmake nudges it
   tobuild(infloop infloop.c)
   get_target_path_for_execution(infloop_path infloop)
@@ -1024,7 +1024,7 @@ else ()
     newtest(malloc malloc.c)
     newtest(leak_indirect leak_indirect.c)
   endif ()
-  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
     newtest_custbuild(bitfield bitfield.cpp "-DBITFIELD_ASM" bitfield)
   endif ()
   newtest(patterns patterns.c)
@@ -1044,7 +1044,7 @@ else ()
   if (NOT ANDROID) # FIXME i#1860: fix for Android
     newtest_ex(malloc.pattern malloc.c "" "-unaddr_only" "" OFF "" 0)
   endif ()
-  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM
+  if (NOT ARM AND NOT AARCH64) # XXX i#1726: port to ARM + i#2016 port to AArch64
     newtest_ex(registers.pattern registers.c "" "-unaddr_only" "" OFF
       "registers.pattern" 0)
   endif ()
