i#2399 libunwind: Use drcallstack for better Linux callstacks
Updates DR to 53af6c7 for the new drcallstack library.

Adds a new option -callstack_use_unwind which is on by default for
Linux.  This uses drcallstack's libunwind-based callstack walk, which
fixes problems of missing frames.  If the starting PC is not in a
module, the old callstack walking is used.

Updates malloc replacement contexts to include the PC as of the same
point as the captured stack pointer, for proper libunwind input.

Issue: #823, #2399, #2392, #1222
Fixes #2392

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -404,6 +404,14 @@ if (UNIX)
     # see comments above about adding configure.h
     set(DEFINES ${DEFINES} -DHAVE_ASM_I386)
   endif (HAVE_ASM_I386)
+  if (LINUX)
+    check_include_files("libunwind.h" HAVE_LIBUNWIND_H)
+    if (HAVE_LIBUNWIND_H)
+      set(DEFINES ${DEFINES} -DHAVE_LIBUNWIND_H)
+    endif ()
+  else ()
+    set(HAVE_LIBUNWIND_H OFF)
+  endif ()
 endif (UNIX)
 
 if (UNIX)
@@ -1294,6 +1302,9 @@ use_DynamoRIO_extension(${client_target} drx_static)
 use_DynamoRIO_extension(${client_target} drutil_static)
 use_DynamoRIO_extension(${client_target} drwrap_static)
 use_DynamoRIO_extension(${client_target} drreg_static)
+if (HAVE_LIBUNWIND_H)
+  use_DynamoRIO_extension(${client_target} drcallstack_static)
+endif ()
 # DRi#1829: we discussed invoking drcov as a separate client, which would require using
 # all shared ext libs.  We ended up making drcovlib.
 use_DynamoRIO_extension(${client_target} drcovlib_static)
@@ -1865,6 +1876,9 @@ if (BUILD_TOOL_TESTS)
     use_DynamoRIO_extension(unit_tests drutil_static)
     use_DynamoRIO_extension(unit_tests drwrap_static)
     use_DynamoRIO_extension(unit_tests drsyms_static)
+    if (HAVE_LIBUNWIND_H)
+      use_DynamoRIO_extension(unit_tests drcallstack_static)
+    endif ()
     use_DynamoRIO_extension(unit_tests drcovlib_static)
     target_link_libraries(unit_tests drsyscall_int)
     target_link_libraries(unit_tests umbra_int)
