--- a/.github/workflows/ci-clang.yml
+++ b/.github/workflows/ci-clang.yml
@@ -69,8 +69,8 @@ jobs:
         pushd ../extract
         apt download libunwind8:i386 libunwind-dev:i386 liblzma5:i386
         for i in *.deb; do dpkg-deb -x $i .; done
-        sudo rsync -av ./usr/lib/i386-linux-gnu/ /lib/i386-linux-gnu/
-        sudo rsync -av ./lib/i386-linux-gnu/ /lib/i386-linux-gnu/
+        sudo rsync -av ./usr/lib/i386-linux-gnu/ /lib32/
+        sudo rsync -av ./lib/i386-linux-gnu/ /lib32/
         sudo rsync -av ./usr/include/i386-linux-gnu/ /usr/include/
         popd
 
