Fix docs workflow for drcallstack
Install libunwind-dev for the docs workflow to avoid a DR cmake abort.
Update the New Release docs to suggest using a PR branch for the package.

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Create Build Environment
       run: |
         sudo apt-get update
-        sudo apt-get -y install doxygen jsonlint
+        sudo apt-get -y install doxygen jsonlint libunwind-dev
 
     - name: Get Version
       id: version
