--- a/tests/app_suite/CMakeLists.txt
+++ b/tests/app_suite/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2011-2018 Google, Inc.  All rights reserved.
+# Copyright (c) 2011-2022 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -63,6 +63,7 @@ if (UNIX)
     append_compile_flags(app_suite_tests "-DANDROID")
   endif ()
   append_compile_flags(app_suite_tests "-Wno-unused-private-field")
+  append_compile_flags(app_suite_tests "-Wno-maybe-uninitialized")
 elseif (WIN32)
   # Work around googletest VS2012 failures by upping _VARIADIC_MAX from 5 (i#1141)
   append_compile_flags(app_suite_tests "-DWIN32 -D_VARIADIC_MAX=10")
