--- a/.github/workflows/ci-osx.yml
+++ b/.github/workflows/ci-osx.yml
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2020 Google, Inc.  All rights reserved.
+# Copyright (c) 2020-2022 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -40,7 +40,7 @@ defaults:
 jobs:
   # 64-bit OSX build with clang and tests:
   osx-x86-64:
-    runs-on: macos-10.15
+    runs-on: macos-11
 
     steps:
     - uses: actions/checkout@v2
@@ -57,7 +57,7 @@ jobs:
       run: git fetch --no-tags --depth=1 origin master
 
     - name: Create Build Environment
-      run: brew install nasm
+      run: brew install nasm zlib snappy lz4
 
     - name: Run Suite
       working-directory: ${{ github.workspace }}
@@ -68,4 +68,4 @@ jobs:
         # https://github.community/t/selecting-an-xcode-version/16204/3
         # To find available versions, add the following as a step above:
         #  - run: ls -l /Applications
-        DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
+        DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
