--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -127,7 +127,7 @@ jobs:
       run: git fetch --no-tags --depth=1 origin master
 
     - name: Create Build Environment
-      run: brew install nasm
+      run: brew install nasm zlib snappy lz4
 
     - name: Get Version
       id: version
@@ -154,7 +154,7 @@ jobs:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
         # See ci-osx.yml comments: we need to set the xcode version.
-        DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
+        DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
