Fixes several issues with the latest DR and recent Linux platforms:
+ DWARF5 is now the gcc default but is not supported (#2485) so we add
  -gdwarf-4 to our test flags and the docs.

+ Adds Linux syscall entries for rseq and getrandom, seen on tiny apps now.

+ Fixes a bug in the size of kernel_sigset_t which was resulting in
  false positive uninitialized errors in rt_sigaction.

+ Updates drltrace code for droption now being in a namespace.

+ Adds --recursive to the git submodule commands to get minizip for
  the DR build.

+ Relaxes the drltrace tests to allow __IO_puts and __open.

--- a/.github/workflows/ci-aarchxx.yml
+++ b/.github/workflows/ci-aarchxx.yml
@@ -45,7 +45,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        submodules: true
+        submodules: recursive
 
     # Cancel any prior runs for a PR (but do not cancel master branch runs).
     - uses: n1hility/cancel-previous-runs@v2
@@ -87,7 +87,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        submodules: true
+        submodules: recursive
 
     # Cancel any prior runs for a PR (but do not cancel master branch runs).
     - uses: n1hility/cancel-previous-runs@v2
