--- a/drltrace/drltrace_linux.config
+++ b/drltrace/drltrace_linux.config
@@ -1,5 +1,5 @@
 # ***************************************************************************
-# Copyright (c) 2017 Google, Inc.  All rights reserved.
+# Copyright (c) 2017-2023 Google, Inc.  All rights reserved.
 # ***************************************************************************
 #
 #
@@ -47,4 +47,6 @@ int|strcmp|char *|char *
 int|wcscmp|wchar *|wchar *
 int|printf|char *
 int|puts|char *
-
+int|_IO_puts|char *
+int|open|char *|int
+int|__open|char *|int
