--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2010-2022 Google, Inc.  All rights reserved.
+# Copyright (c) 2010-2023 Google, Inc.  All rights reserved.
 # Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -335,6 +335,11 @@ if (UNIX)
       set(CMAKE_EXE_LINKER_FLAGS
         "${CMAKE_EXE_LINKER_FLAGS} -fPIE -pie -Wl,--export-dynamic")
     endif ()
+  endif ()
+  # TODO i#2485: Add DWARF-5 support.
+  CHECK_C_COMPILER_FLAG("-gdwarf-5" have_dwarf5)
+  if (have_dwarf5)
+    set(EXTRA_FLAGS "${EXTRA_FLAGS} -gdwarf-4")
   endif ()
   # We use C++11.
   set(EXTRA_CXXFLAGS "-std=c++11")
