--- a/.github/workflows/ci-clang.yml
+++ b/.github/workflows/ci-clang.yml
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2020-2021 Google, Inc.  All rights reserved.
+# Copyright (c) 2020-2024 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -63,11 +63,13 @@ jobs:
     - name: Create Build Environment
       run: |
         sudo apt-get update
-        sudo apt-get -y install doxygen jsonlint g++-multilib libunwind-dev
+        sudo apt-get -y install doxygen jsonlint g++-multilib libunwind-dev \
+          zlib1g zlib1g-dev
         sudo add-apt-repository 'deb [arch=i386] http://us.archive.ubuntu.com/ubuntu focal main'
         mkdir ../extract
         pushd ../extract
-        apt download libunwind8:i386 libunwind-dev:i386 liblzma5:i386
+        apt download libunwind8:i386 libunwind-dev:i386 liblzma5:i386 \
+          zlib1g:i386 zlib1g-dev:i386
         for i in *.deb; do dpkg-deb -x $i .; done
         sudo rsync -av ./usr/lib/i386-linux-gnu/ /lib32/
         sudo rsync -av ./lib/i386-linux-gnu/ /lib32/
