Copy to both /lib32 (for ld.so) and /usr/lib/i386-linux-gnu/ (for cmake find_package)

--- a/.github/workflows/ci-clang.yml
+++ b/.github/workflows/ci-clang.yml
@@ -70,6 +70,10 @@ jobs:
           zlib1g:i386 zlib1g-dev:i386
         mkdir ../extract
         for i in *.deb; do dpkg-deb -x $i ../extract; done
+        # find_package(ZLIB) doesn't find /lib32, yet ld.so seems to need lib32,
+        # so we do both:
+        sudo rsync -av ../extract/usr/lib/i386-linux-gnu/ /usr/lib/i386-linux-gnu/
+        sudo rsync -av ../extract/lib/i386-linux-gnu/ /usr/lib/i386-linux-gnu/
         sudo rsync -av ../extract/usr/lib/i386-linux-gnu/ /lib32/
         sudo rsync -av ../extract/lib/i386-linux-gnu/ /lib32/
         sudo rsync -av ../extract/usr/include/i386-linux-gnu/ /usr/include/
