--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -120,52 +120,7 @@ jobs:
 
   ###########################################################################
   # Mac tarball with x86-64 build:
-  osx:
-    runs-on: macos-11
-
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: recursive
-
-    - name: Fetch Sources
-      run: git fetch --no-tags --depth=1 origin master
-
-    - name: Create Build Environment
-      run: brew install nasm zlib snappy lz4
-
-    - name: Get Version
-      id: version
-      # XXX: See x86 job comments on sharing the default ver# with CMakeLists.txt.
-      run: |
-        if test -z "${{ github.event.inputs.version }}"; then
-          export PATCHLEVEL=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export PATCHLEVEL=$(((PATCHLEVEL %200) + 56))
-          export VERSION_NUMBER="2.6.${PATCHLEVEL}"
-          export PREFIX="cronbuild-"
-        else
-          export VERSION_NUMBER=${{ github.event.inputs.version }}
-          export PREFIX="release_"
-        fi
-        if [ "${{ github.event.inputs.build }}" -ne 0 ]; then
-          export VERSION_NUMBER="${VERSION_NUMBER}-${{ github.event.inputs.build }}"
-        fi
-        echo "::set-output name=version_number::${VERSION_NUMBER}"
-
-    - name: Build Package
-      working-directory: ${{ github.workspace }}
-      run: ./tests/runsuite_wrapper.pl travis
-      env:
-        CI_TARGET: package
-        VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
-        # See ci-osx.yml comments: we need to set the xcode version.
-        DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
-
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: mac-tarball
-        path: DrMemory-MacOS-${{ steps.version.outputs.version_number }}.tar.gz
+  # TODO i#2511: re-enable once it works on macos-12.
 
   ###########################################################################
   # Windows .zip and .msi with 32-bit and 64-bit x86 builds:
